@@ -1,5 +1,6 @@
 0.05
  - Add information about hex_length in doc.
+ - Fix running of author tests.
  - Fix test comments.
 
 0.04 2017-12-19T14:12:57+01:00
